# CEF

./: .gitignore  BUILDING_WINDOW_APPS.md  CECILL-LICENSE.txt  CEFConfig.cmake.in  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
cmake/: CEFDeployment.cmake  CEFDownload.cmake  CEFInstall.cmake  CEFOptions.cmake  CEFPlatform.cmake  CEFTesting.cmake  CEFWrapper.cmake  MacOSXBundleInfo.plist.in
docs/: DEPLOYMENT.md
example/: CMakeLists.txt  README.md  example_main.cpp  simple_app.cpp  simple_test.cpp  test_cpm_integration.cmake
example/test_build/: CMakeLists.txt
test/: CMakeLists.txt  cef_borderless_window_test.cpp  cef_resources_test.cpp  cef_sanity_test.cpp  cef_window_test.cpp  main.cpp
